# GymController

./: .gitignore  main.c  menu.c  menu.h
Documentation/: member_dgn.drawio
Realization/: CMakeLists.txt
Realization/Inc/: date.h  dbmanager.h  member.h  menu.h
Realization/Src/: date.c  dbmanager.c  main.c  menu.c
